fix rebase conflict (#414)
* fix an resume sdk bug when upload docx file

* resume preview adjustment change from pair programming with Woody

* update a test

* cleanup

* fix a bug when delete button doesn't work

* fix delete resume part doesn't refresh resume preview issue

* [BE][TF-347] fix wechat logon/register bug

* feat: TF-338 使用条款弹窗

* feat: TF-280 点击X返回resume hub

* feat: TF-344 经历写作助手调整

* TF-345 岗位搜索调整

* fix an resume sdk bug when upload docx file

* resume preview adjustment change from pair programming with Woody

* update a test

* cleanup

* fix a bug when delete button doesn't work

* fix delete resume part doesn't refresh resume preview issue

* add loading text on one page adjustment

* revert some files

* add language toggle

* add loading text on one page adjustment

* revert some files

* feat: updates

* feat: dropdown选项更改

* feat: update

* [BE][TF-265] populate resume writing suggestions data

* add language toggle

* fix rebase conflict

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>
Co-authored-by: bambambam <bambamkuka@gmail.com>
Co-authored-by: Joseph Jin <jerkjoe61@gmail.com>

--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -43,7 +43,7 @@
   bottom: 0;
 }
 
-.widgetContainer div {
+.widgetContainer>div {
   max-width: 720px;
   margin: 0 auto;
   justify-content: space-between;
@@ -264,6 +264,8 @@
   background-color: #ffffff;
   color: #333;
 }
+
+/* language toggle style */
 
 @media only screen and (max-width: 1440px) {
   .container {
