--- a/onboarding-app/src/main/resources/templates/layout.html
+++ b/onboarding-app/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
 >
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
+  <script src="https://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
