--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -37,6 +37,11 @@
             >创建一份简历，百万毕业生的最佳选择
           </p>
           <a href="/login"> 点击开始创建 </a>
+          <div class="qrcode">
+              <img width="150" src="./assets/wechat_qr_code.jpg">
+              <p>有任何疑问？</p>
+              <p>请扫码联系客服</p>
+          </div>
         </div>
         <div class="banner-right">
           <img src="./assets/banner_png.png" />
